# uk-tax-calculator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/uk_tax_calculator/: __init__.py  calculator.py
tests/: conftest.py  test-cases.yaml  test__main.py  test__uk_tax_calculator.py
uk_tax_calculator/: __init__.py  calculator.py  tax-bands.csv  tax-bands.schema.json
